--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html> 
-<head>
- <title>Hola mundo</title> 
-<head> 
-<body>
- <h1>Prueba titulo</h1>
+ <head>
+  <title>Hola mundo</title> 
+ </head> 
+ <body>
+  <h1>Prueba titulo</h1>
  
 </body>
 </html>
